# asphalt-turret

./: .gitignore  README.md
apps/api/: pyproject.toml
apps/api/src/asphalt_turret_api/: app.py
apps/api/src/asphalt_turret_api/routers/: clips.py  imports.py  sd_card.py  sd_files.py  settings.py  volumes.py
apps/api/src/asphalt_turret_api/schemas/: clip.py  job.py  sd_card.py  volume.py
apps/api/src/asphalt_turret_api/util/: streaming.py
apps/desktop/: index.html  package-lock.json  package.json  tailwind.config.ts
apps/desktop/src/: App.vue  main.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/Views/: ImportView.vue  RepoView.vue  SettingsView.vue  Shell.vue
apps/desktop/src/api/: client.ts  clips.ts  imports.ts  jobs.ts  sd_card.ts  settings.ts  thumbnails.ts  types.ts  volumes.ts
apps/desktop/src/components/: ClipBrowser.vue  ClipList.vue  ClipPlayer.vue  FileToolsSideBar.vue  SDFileList.vue  SDFileTools.vue  SDFileToolsSideBar.vue  SDFileTree.vue  Tools.vue
apps/desktop/src/components/clips/: ClipBrowser.vue
apps/desktop/src/components/common/: Nav.vue
apps/desktop/src/components/imports/: SDFileBrowser.vue  VolumeSelector.vue
apps/desktop/src/composables/: useActiveJobs.ts  useClips.ts  useJobTracking.ts  useKeyboardShortcuts.ts  useSDFiles.ts  useSettings.ts  useSettingsDraft.ts  useThumbnail.ts  useViewMode.ts
apps/desktop/src/layout/: Shell.vue
apps/desktop/src/styles/: primevue-overrides.css
apps/desktop/src/utils/: date.ts  file_parser.ts  format.ts
(+9 files in other folders)
