[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asphalt-turret-api"
version = "0.1.0"
description = "FastAPI backend for ASPHALT-TURRET dashcam management"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Ryan Moore", email = "me@ryanmoore.xyz"}
]

dependencies = [
    "asphalt-turret-engine",
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-v",
]